--- a/mynewapp/templates/home.html
+++ b/mynewapp/templates/home.html
@@ -10,11 +10,11 @@
 
 <style>
   .carousel-img {
-  width: 90%;              /* Makes it medium size with some space on both sides */
-  height: 600px;           /* Medium fixed height */
-  object-fit: cover;       /* Keeps image proportional without stretching */
-  margin: 0 auto;          /* Center the image */
-  border-radius: 10px;     /* Optional: smooth corners */
+  width: 90%;
+  height: 600px;
+  object-fit: cover;
+  margin: 0 auto;
+  border-radius: 10px;
 }
 </style>
 <div id="carouselExampleCaptions" class="carousel slide mt-5" data-bs-ride="carousel" data-bs-interval="3000">
@@ -68,8 +68,9 @@
   </div>
 </section>
 </div>
+
 <!-- ABOUT -->
-<section id="about" class="py-5" style="background: #f8f9fa;">
+<section id="about" class="py-5" style="background: #f8f9fa;padding-top:100px">
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="fw-bold text-success">About Us</h2>
