--- a/mynewapp/templates/profile.html
+++ b/mynewapp/templates/profile.html
@@ -26,6 +26,8 @@
         </table>
         <div class="text-center mt-3">
             <a href="{% url 'logout_page' %}" class="btn btn-danger">Logout</a>
+            <a href="{% url 'edit_page' %}" class="btn btn-primary">Edit</a>
+
         </div>
     </div>
 </div>
