--- a/mynewapp/templates/about1.html
+++ b/mynewapp/templates/about1.html
@@ -48,6 +48,9 @@
     }
 </style>
 
+    <a href="/login/" class="btn btn-secondary" style="margin-left:30px;margin-top:30px">Back</a>
+
+
 <div class="abou1">
     <div class="left">
         <img src="{% static 'img/book1.jpg' %}">
@@ -62,7 +65,8 @@
         </p>
         <p style="font-size:25px;">Rs. 799</p>
         <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br><br>
-        <a href="{% url 'buy_now' %}?source=buy_now" class="btn btn-success btn">Buy Now</a>
+<a href="{% url 'buy_now' %}?book_name=India%20That%20Is%20Bharat&price=799"
+   class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
 
