--- a/mynewapp/templates/about13.html
+++ b/mynewapp/templates/about13.html
@@ -53,6 +53,7 @@
         }
     }
 </style>
+    <a href="/login/" class="btn btn-secondary" style="margin-left:30px;margin-top:30px">Back</a>
 
 <div class="abou1">
     <div class="left">
@@ -68,7 +69,7 @@
         <p style="font-size:25px;">Rs. 1199</p>
 
         <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
-        <a href="{% url 'buy_now' %}?source=buy_now" class="btn btn-success btn">Buy Now</a>
+        <a href="{% url 'buy_now' %}?book_name=Jane %20Eyre&price=1199" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
 
