--- a/mynewapp/templates/about16.html
+++ b/mynewapp/templates/about16.html
@@ -54,6 +54,7 @@
         }
     }
 </style>
+    <a href="/login/" class="btn btn-secondary" style="margin-left:30px;margin-top:30px">Back</a>
 
 <div class="abou1">
     <div class="left">
@@ -76,7 +77,7 @@
         <p style="font-size:25px; font-weight: bold;">Rs. 1199</p>
 
         <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
-        <a href="{% url 'buy_now' %}?source=buy_now" class="btn btn-success btn">Buy Now</a>
+        <a href="{% url 'buy_now' %}?book_name=A %20tale %20of %20love %20and %20society%20!&price=1199" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
 
