--- a/mynewapp/templates/about2.html
+++ b/mynewapp/templates/about2.html
@@ -54,6 +54,7 @@
         }
     }
 </style>
+    <a href="/login/" class="btn btn-secondary" style="margin-left:30px;margin-top:30px">Back</a>
 
 <div class="abou1">
     <div class="left">
@@ -69,7 +70,8 @@
         <p style="font-size:25px;">Rs. 1299</p>
 
         <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
-        <a href="{% url 'buy_now' %}?source=buy_now" class="btn btn-success btn">Buy Now</a>
+        <a href="{% url 'buy_now' %}?book_name=The %20History %20Of %20Ancient%20 And %20Early %20Medieval %20India&price=1299"
+        class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
 
