--- a/mynewapp/templates/about36.html
+++ b/mynewapp/templates/about36.html
@@ -54,6 +54,7 @@
         }
     }
 </style>
+    <a href="/login/" class="btn btn-secondary" style="margin-left:30px;margin-top:30px">Back</a>
 
 <div class="abou1">
     <div class="left">
@@ -70,7 +71,7 @@
         <p style="font-size:25px; font-weight:bold;">Rs. 799</p>
 
         <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
-        <a href="{% url 'buy_now' %}?source=buy_now" class="btn btn-success btn">Buy Now</a>
+        <a href="{% url 'buy_now' %}?book_name=Krishna&price=799" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
 
