--- a/mynewapp/templates/about5.html
+++ b/mynewapp/templates/about5.html
@@ -53,6 +53,7 @@
         }
     }
 </style>
+    <a href="/login/" class="btn btn-secondary" style="margin-left:30px;margin-top:30px">Back</a>
 
 <div class="abou1">
     <div class="left">
@@ -67,7 +68,7 @@
         <p style="font-size:25px;">Rs. 1599</p>
 
         <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
-        <a href="{% url 'buy_now' %}?source=buy_now" class="btn btn-success btn">Buy Now</a>
+        <a href="{% url 'buy_now' %}?book_name=History %20Of %20Ancient%20 Civilization&price=1599" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
 
