--- a/mynewapp/templates/admin_book.html
+++ b/mynewapp/templates/admin_book.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 col-lg-12 col-xl-12">
-            <table class="table table-hover">
+            <table class="table">
                 <thead>
                 <tr>
 
@@ -20,11 +20,13 @@
                 <th>Time</th>
                 <th>Contact</th>
                 <th>address</th>
+                    <th>Action</th>
                 </tr>
                 </thead>
 
                 <tbody>
                 {% for x in data %}
+
                 <tr>
                 <td>{{x.book_name}}</td>
                 <td>{{x.quantity}}</td>
@@ -32,6 +34,7 @@
                 <td>{{x.time}}</td>
                 <td>{{x.mobile}}</td>
                 <td>{{x.address}}</td>
+<td><a class="btn btn-danger" href="{% url 'delete_order'%}?id={{x.bid}}" onclick="return confirm('Are you sure you want to delete this order')">Delete</a></td>
                 </tr>
                 {% endfor %}
                 </tbody>
