--- a/mynewapp/templates/login.html
+++ b/mynewapp/templates/login.html
@@ -25,7 +25,7 @@
 
             {{msg}}
             <input type="submit" name="info" value="Login" class="btn btn-primary">
-            <a href="" style="text-decoration:none">Forget Password ?</a>
+            <a href="{% url 'mail_send' %}" class="btn btn-link" style="text-decoration:none">Forget Password ?</a>
         </form>
     </div>
 </div>
