--- a/mynewapp/templates/read_book.html
+++ b/mynewapp/templates/read_book.html
@@ -23,10 +23,11 @@
                 <input type="text" name="user_email" value="{{user_email}}" class="form-control" readonly>
             </div>
 
-            <div class="form-group">
-                <label>Book Name:-</label>
-                <input type="text" name="book_name" id="name" class="form-control" required>
-            </div>
+           <div class="form-group">
+    <label>Book Name:-</label>
+    <input type="text" name="book_name" id="name" class="form-control"
+           value="{{book_name}}" readonly>
+</div>
 
             <div class="form-group">
                 <label>Quantity:-</label>
@@ -53,10 +54,11 @@
                 <input type="number" name="mobile" value="{{user_contact}}" class="form-control" readonly>
             </div>
 
-            <div class="form-group">
-                <label>Total Price:-</label>
-                <input type="number" name="total_price" id="payment" class="form-control" required>
-            </div>
+           <div class="form-group">
+    <label>Total Price:-</label>
+    <input type="number" name="total_price" id="payment" class="form-control"
+           value="{{price}}" readonly>
+</div>
 
             <br>
             <h4>{{msg}}</h4>
