--- a/mynewapp/templates/register.html
+++ b/mynewapp/templates/register.html
@@ -6,11 +6,15 @@
 
 {% block body %}
 
+    <a href="/#home" class="btn btn-secondary" style="margin-left:30px;margin-top:30px">Back</a>
+
 <div class="container">
     <div class="col-md-6 col-lg-6 col-xl-6  mx-auto">
 
         <form method="POST" action="{% url 'user_data' %}"  style="margin-bottom:50px;">
             {% csrf_token %}
+            <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;Register User</h2><br>
             <div class="form-group">
                 <label>Username:-</label>
                 <input type="text" name="uname"  class="form-control" required>
