--- a/mynewapp/templates/register.html
+++ b/mynewapp/templates/register.html
@@ -13,8 +13,7 @@
 
         <form method="POST" action="{% url 'user_data' %}"  style="margin-bottom:50px;">
             {% csrf_token %}
-            <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;Register User</h2><br>
+            <h2>Register User</h2><br>
             <div class="form-group">
                 <label>Username:-</label>
                 <input type="text" name="uname"  class="form-control" required>
