--- a/mynewapp/templates/read_book.html
+++ b/mynewapp/templates/read_book.html
@@ -44,10 +44,10 @@
                 <input type="date" name="date" id="date" min="{{date}}" class="form-control" required>
             </div>
 
-            <div class="form-group">
-                <label>Time:-</label>
-                <input type="time" name="time" id="time" class="form-control" required>
-            </div>
+<!--            <div class="form-group">-->
+<!--                <label>Time:-</label>-->
+<!--                <input type="time" name="time" id="time" class="form-control" required>-->
+<!--            </div>-->
 
             <div class="form-group">
                 <label>Contact :-</label>
