--- a/mynewapp/templates/payment.html
+++ b/mynewapp/templates/payment.html
@@ -22,7 +22,7 @@
             <label>CVV:</label>
             <input type="password" class="form-control" required>
         </div>
-        <button type="submit" class="btn btn-success" style="width:1200px">Pay Now</button>
-    </form><br>
+        <button type="submit" class="btn btn-success" style="width:1200px;">Pay Now</button>
+    </form>
 </div>
 {% endblock %}
