--- a/mynewapp/templates/about1.html
+++ b/mynewapp/templates/about1.html
@@ -64,7 +64,8 @@
             racial roots, has significantly shaped India's understanding of itself and its relationship with its Indic civilization.
         </p>
         <p style="font-size:25px;">Rs. 799</p>
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br><br>
+<a href="{% url 'add_to_cart' 1 %}?price=799&name=India That Is Bharat " class="btn btn-primary">Add to Cart</a>
+<br><br>
 <a href="{% url 'buy_now' %}?book_name=India%20That%20Is%20Bharat&price=799"
    class="btn btn-success btn">Buy Now</a>
     </div>
