--- a/mynewapp/templates/about11.html
+++ b/mynewapp/templates/about11.html
@@ -67,7 +67,7 @@
         </p>
         <p style="font-size:25px;">Rs. 199</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+        <a href="{% url 'add_to_cart' 11 %}?price=199&name=The World I SEE" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The %20World%20 I%20 See&price=199" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
