--- a/mynewapp/templates/about12.html
+++ b/mynewapp/templates/about12.html
@@ -68,7 +68,7 @@
         </p>
         <p style="font-size:25px;">Rs. 1399</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 12 %}?price=1399&name=The Basics Of Robotics " class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The %20Basics%20 Of%20 Robotics&price=1399" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
