--- a/mynewapp/templates/about13.html
+++ b/mynewapp/templates/about13.html
@@ -68,7 +68,7 @@
         </p>
         <p style="font-size:25px;">Rs. 1199</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+<a href="{% url 'add_to_cart' 13 %}?price=1199&name=Jane Eyre" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Jane %20Eyre&price=1199" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
