--- a/mynewapp/templates/about14.html
+++ b/mynewapp/templates/about14.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px;">Rs. 699</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 14 %}?price=699&name=The Great Gatsby" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The %20Great %20Gatsby&price=699" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
