--- a/mynewapp/templates/about16.html
+++ b/mynewapp/templates/about16.html
@@ -76,7 +76,7 @@
 
         <p style="font-size:25px; font-weight: bold;">Rs. 1199</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+      <a href="{% url 'add_to_cart' 16 %}?price=1199&name=A Tale Of Love And Society" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=A %20tale %20of %20love %20and %20society%20!&price=1199" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
