--- a/mynewapp/templates/about17.html
+++ b/mynewapp/templates/about17.html
@@ -79,7 +79,7 @@
 
         <p style="font-size:25px; font-weight: bold;">Rs. 1599</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 17 %}?price=1599&name=The Exorcist" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The%20Exorcist&price=1599" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
