--- a/mynewapp/templates/about2.html
+++ b/mynewapp/templates/about2.html
@@ -69,7 +69,7 @@
 
         <p style="font-size:25px;">Rs. 1299</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+        <a href="{% url 'add_to_cart' 2 %}?price=1299&name=The History Ancient And Early Medieval India" class="btn btn-primary">Add to Cart</a><br><br>
         <a href="{% url 'buy_now' %}?book_name=The %20History %20Of %20Ancient%20 And %20Early %20Medieval %20India&price=1299"
         class="btn btn-success btn">Buy Now</a>
     </div>
