--- a/mynewapp/templates/about25.html
+++ b/mynewapp/templates/about25.html
@@ -71,7 +71,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 499</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 25 %}?price=499&name=The Alchemist" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The %20Alchemist&price=499" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
