--- a/mynewapp/templates/about26.html
+++ b/mynewapp/templates/about26.html
@@ -71,7 +71,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 399</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 26 %}?price=399&name=Rich Dad Poor Dad" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Rich %20Dad%20 Poor%20 Dad&price=399" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
