--- a/mynewapp/templates/about28.html
+++ b/mynewapp/templates/about28.html
@@ -71,7 +71,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 299</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 28 %}?price=299&name=Atomic Habits" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Atomic%20 Habits&price=299" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
