--- a/mynewapp/templates/about3.html
+++ b/mynewapp/templates/about3.html
@@ -66,7 +66,7 @@
             Author William Craig traveled to three different continents, reviewed thousands of documents, and interviewed hundreds of survivors to write these New York Times–bestselling histories, bringing the Eastern Front and the Pacific Theater of World War II to vivid life.
         </p>
         <p style="font-size:25px;">Rs. 599</p>
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+        <a href="{% url 'add_to_cart' 3 %}?price=599&name=William Craig (The World War 2)" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=William %20Craig&price=599" class="btn btn-success btn">Buy Now</a>
 
     </div>
