--- a/mynewapp/templates/about32.html
+++ b/mynewapp/templates/about32.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 599</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+        <a href="{% url 'add_to_cart' 32 %}?price=599&name=Conversations" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Conversations&price=599" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
