--- a/mynewapp/templates/about33.html
+++ b/mynewapp/templates/about33.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 199</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 33 %}?price=199&name=The God Of Small Things" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The %20God %20Of %20Small %20Things&price=199" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
