--- a/mynewapp/templates/about34.html
+++ b/mynewapp/templates/about34.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 399</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 34 %}?price=399&name=The Immortal Of Meluha" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The %20Immortals%20 Of %20Meluha&price=399" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
