--- a/mynewapp/templates/about4.html
+++ b/mynewapp/templates/about4.html
@@ -66,8 +66,7 @@
             Moser was just twenty-two years old, a farm boy from Washington State who fell in love with flying. During the War he realized his dream of piloting a P-38 Lightning, one of the most effective weapons the Army Air Corps had against the powerful German Luftwaffe. But on that hot August morning he had to bail out of his damaged, burning plane. Captured immediately, Moser’s journey into hell began.
         </p>
         <p style="font-size:25px;">Rs. 999</p>
-
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+<a href="{% url 'add_to_cart' 4 %}?price=999&name=Lightning down" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Lightning %20Down&price=999" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
