--- a/mynewapp/templates/about5.html
+++ b/mynewapp/templates/about5.html
@@ -67,7 +67,7 @@
         </p>
         <p style="font-size:25px;">Rs. 1599</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+      <a href="{% url 'add_to_cart' 5 %}?price=1599&name=History Ancient Civilization" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=History %20Of %20Ancient%20 Civilization&price=1599" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
