--- a/mynewapp/templates/about7.html
+++ b/mynewapp/templates/about7.html
@@ -67,7 +67,7 @@
         </p>
         <p style="font-size:25px;">Rs. 399</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+      <a href="{% url 'add_to_cart' 7 %}?price=399&name=Indian Struggle for independence " class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Indian %20Struggle %20For %20Independence&price=399" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
