--- a/mynewapp/templates/about8.html
+++ b/mynewapp/templates/about8.html
@@ -68,7 +68,7 @@
         </p>
         <p style="font-size:25px;">Rs. 299</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+        <a href="{% url 'add_to_cart' 8 %}?price=299&name=World War 2" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=World %20War %20II &price=299" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
