--- a/mynewapp/templates/about9.html
+++ b/mynewapp/templates/about9.html
@@ -67,7 +67,7 @@
         </p>
         <p style="font-size:25px;">Rs. 999</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+     <a href="{% url 'add_to_cart' 9 %}?price=999&name=Physics For Greeks" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Physics %20For %20Greeks &price=999" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
