--- a/mynewapp/templates/about10.html
+++ b/mynewapp/templates/about10.html
@@ -67,7 +67,7 @@
         </p>
         <p style="font-size:25px;">Rs. 499</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+      <a href="{% url 'add_to_cart'     10 %}?price=499&name=Computing The Age Of AI" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Computing %20In%20 The%20 Age%20 Of %20AI&price=499" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
