--- a/mynewapp/templates/about15.html
+++ b/mynewapp/templates/about15.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px;">Rs. 1199</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+        <a href="{% url 'add_to_cart' 15 %}?price=1199&name=The Great GatsBy" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The%20 Great %20Gatsby&price=1199" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
