--- a/mynewapp/templates/about20.html
+++ b/mynewapp/templates/about20.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 99</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 20 %}?price=99&name=The Canterville Host" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The %20Canterville %20Ghost&price=99" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
