--- a/mynewapp/templates/about22.html
+++ b/mynewapp/templates/about22.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 79</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+        <a href="{% url 'add_to_cart' 22 %}?price=79&name=Samuel Small PLOP" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Samuel %20Small %20-%20 PLOP&price=79" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
