--- a/mynewapp/templates/about23.html
+++ b/mynewapp/templates/about23.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 999</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+        <a href="{% url 'add_to_cart' 23 %}?price=999&name=Ghost The Silent HILL" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Ghost %20Of %20The %20Silent%20 Hills&price=999" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
