--- a/mynewapp/templates/about24.html
+++ b/mynewapp/templates/about24.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 1299</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 24 %}?price=1299&name=Greatest Horror Stories" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Greatest%20 Horror %20Storie&price=1299" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
