--- a/mynewapp/templates/about27.html
+++ b/mynewapp/templates/about27.html
@@ -71,7 +71,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 499</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+      <a href="{% url 'add_to_cart' 27 %}?price=499&name=The Power Of Habit" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=The %20Power %20of%20 Habit&price=499" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
