--- a/mynewapp/templates/about29.html
+++ b/mynewapp/templates/about29.html
@@ -71,7 +71,7 @@
 
         <p style="font-size:25px; font-weight:bold;">Rs. 499</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 29 %}?price=499&name=Bhagavad Gita" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Bhagavad %20Gita&price=499" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
