--- a/mynewapp/templates/about30.html
+++ b/mynewapp/templates/about30.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 399</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+        <a href="{% url 'add_to_cart' 30 %}?price=399&name=Bhagavad Ramayan" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Bhagavad Ramayan &price=399" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
