--- a/mynewapp/templates/about31.html
+++ b/mynewapp/templates/about31.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 699</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+      <a href="{% url 'add_to_cart' 31 %}?price=699&name=Mahabharata" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Mahabharata&price=699" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
