--- a/mynewapp/templates/about35.html
+++ b/mynewapp/templates/about35.html
@@ -70,7 +70,7 @@
         </p>
         <p style="font-size:25px; font-weight:bold;">Rs. 999</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+       <a href="{% url 'add_to_cart' 35 %}?price=999&name=Vishwadarshan" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Vishwadarshan&price=999" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
