--- a/mynewapp/templates/about6.html
+++ b/mynewapp/templates/about6.html
@@ -68,7 +68,7 @@
         </p>
         <p style="font-size:25px;">Rs. 499</p>
 
-        <a href="{% url 'add_to_cart' 5 %}" class="btn btn-primary btn">Add To Cart</a><br>
+     <a href="{% url 'add_to_cart' 6 %}?price=499&name=civilization and the ancient egyptions" class="btn btn-primary">Add to Cart</a><br>
         <a href="{% url 'buy_now' %}?book_name=Civilization%20 And%20 The %20Ancient %20Egyptians&price=499" class="btn btn-success btn">Buy Now</a>
     </div>
 </div>
