--- a/mynewapp/templates/userhome.html
+++ b/mynewapp/templates/userhome.html
@@ -7,6 +7,32 @@
 
     <a href="/#home" class="btn btn-secondary" style="margin-left:30px;margin-top:30px">Back</a>
 
+<style>
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-body {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-title {
+  min-height: 3rem;  /* Keeps titles equal height */
+  text-align: center;
+}
+
+.card-text {
+  flex-grow: 1;
+  text-align: center;
+  min-height: 1rem; /* Equal spacing between cards */
+}
+</style>
 
 <div class="container-fluid">
     <div class="row">
