--- a/mynewapp/templates/update_pass.html
+++ b/mynewapp/templates/update_pass.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="container">
     <div class="col-md-6 mx-auto">
-        <form method="POST" action="{% url 'update_pass' user.id %}">
+        <form method="POST" action="{% url 'update_pass' user.uid %}">
             {% csrf_token %}
             <div class="form-group">
                 <label>New Password:</label>
